--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="icon" href="%PUBLIC_URL%/sensei-logo.png" />
+  <link rel="icon" href="%PUBLIC_URL%/user-image.webp" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
