removing unused fonts

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <title>CodeSensei-Gowtham</title>
   <meta name="description" content="Code-Sensei, also known as Gowtham Paruchuru, is a Senior Software Engineer specializing in Java, Python, and Data Structures and Algorithms. Follow him for System Design, Java tutorials, and Interview Tips." />
 </head>
