--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/users/assets/main/user-image.png" />
   <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/users/assets/main/favicon.ico" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"> -->
   <title>CodeSensei-Gowtham</title>
   <meta name="description" content="Code-Sensei, also known as Gowtham Paruchuru, is a Senior Software Engineer specializing in Java, Python, and Data Structures and Algorithms. Follow him for System Design, Java tutorials, and Interview Tips." />
 </head>
