--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/users/assets/main/user-image.png" />
   <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/users/assets/main/favicon.ico" />
 
+  <link rel="canonical" href="https://www.codesensei.in/">
+
   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"> -->
