--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root">
+    <a href={window.location.href} target='_blank' download>Open in browser</a>
+  </div>
 </body>
 
 </html>
