--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,18 @@
   
   <link rel="icon" type="image/webp" href="%PUBLIC_URL%/users/assets/main/user-image.webp" />
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/users/assets/main/user-image.png" />
-  <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/users/assets/main/favicon.ico" />
+  
+  <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/users/assets/main/fav/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/users/assets/main/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/users/assets/main/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/users/assets/main/fav/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/users/assets/main/fav/site.webmanifest">
 
   <link rel="canonical" href="https://www.codesensei.in/">
 
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet"> -->
-  <title>CodeSensei-Gowtham</title>
-  <meta name="description" content="Code-Sensei, also known as Gowtham Paruchuru, is a Senior Software Engineer specializing in Java, Python, and Data Structures and Algorithms. Follow him for System Design, Java tutorials, and Interview Tips." />
+  <title>Gowtham Paruchuru | Telugu Instagram Tech Creator</title>
+  <meta data-react-helmet="true" name="description" content="CodeSensei, also known as Gowtham Paruchuru, is a Telugu instagram tech creator. Follow him for coding and Interview related Tips." />
+  <meta data-react-helmet="true" name="keywords" content="CodeSensei, also known as Gowtham Paruchuru, is a Telugu instagram tech creator. Follow him for coding and Interview related Tips.">
 </head>
 
 <body>
