--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   <link rel="canonical" href="https://www.codesensei.in/">
 
-  <title>Gowtham Paruchuru | Telugu Instagram Tech Creator</title>
+  <title>CodeSensei | Telugu Instagram Tech Creator | Gowtham Paruchuru</title>
   <meta data-react-helmet="true" name="description" content="CodeSensei, also known as Gowtham Paruchuru, is a Telugu instagram tech creator. Follow him for coding and Interview related Tips." />
   <meta data-react-helmet="true" name="keywords" content="CodeSensei, also known as Gowtham Paruchuru, is a Telugu instagram tech creator. Follow him for coding and Interview related Tips.">
 </head>
