--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <link rel="canonical" href="https://www.codesensei.in/">
 
   <title>CodeSensei | Telugu Instagram Tech Creator | Gowtham Paruchuru</title>
-  <meta data-react-helmet="true" name="description" content="CodeSensei, also known as Gowtham Paruchuru, is a Telugu instagram tech creator. Follow him for coding and Interview related Tips." />
+  <meta data-react-helmet="true" name="description" content="CodeSensei, also known as Gowtham Paruchuru, is a Telugu instagram tech creator. 55,000+ followers on Instagaram." />
   <meta data-react-helmet="true" name="keywords" content="CodeSensei, also known as Gowtham Paruchuru, is a Telugu instagram tech creator. Follow him for coding and Interview related Tips.">
 </head>
 
